<resources>
    <string name="app_name">MasterPass</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to activities -->
    <string name="title_activity_main">MasterPass</string>
    <string name="title_item_list">Passes</string>
    <string name="title_item_detail">Pass Detail</string>
    <string name="title_item_edit">Edit Pass</string>

    <!-- Strings related to edit form -->
    <string name="prompt_name">Name</string>
    <string name="prompt_url">URL</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_notes">Notes</string>
    <string name="action_save">Save Changes</string>

</resources>
